[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/towerv1.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://assets/coin.png" type="Texture" id=3]
[ext_resource path="res://assets/ground.png" type="Texture" id=4]
[ext_resource path="res://assets/ground2.png" type="Texture" id=5]
[ext_resource path="res://assets/plus.png" type="Texture" id=6]
[ext_resource path="res://assets/ARIAL.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://assets/bg.png" type="Texture" id=8]
[ext_resource path="res://Tower.gd" type="Script" id=9]

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.2

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2218.58, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 966.187, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40.7448, 56.6326 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 90.7727, 2.99518 )

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="DynamicFont" id=10]
size = 28
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 7 )

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.609375, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, 5, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 0.27
color_ramp = SubResource( 12 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.387597, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.186047, 0.68046, 1, 1, 0, 0.607422, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 15, 4, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.57
color_ramp = SubResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 346 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="Ground" type="StaticBody2D" parent="." groups=[
"Ground",
]]
position = Vector2( 960, 566.163 )
collision_layer = 4
physics_material_override = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Ground"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2( 0, -52.3842 )
shape = SubResource( 6 )
disabled = true
one_way_collision = true

[node name="ground2" type="Sprite" parent="Ground"]
position = Vector2( 0, 261 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="ground" type="Sprite" parent="Ground"]
visible = false
position = Vector2( 0, 221.811 )
texture = ExtResource( 4 )

[node name="Tower" type="StaticBody2D" parent="." groups=[
"Fence",
]]
position = Vector2( 960, 477.148 )
collision_mask = 9
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
position = Vector2( 0.94397, 3.77551 )
shape = SubResource( 7 )
disabled = true

[node name="Sprite" type="Sprite" parent="Tower"]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower"]
position = Vector2( 0, 76.5661 )
shape = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0272
margin_top = 635.037
margin_right = 145.027
margin_bottom = 785.037
rect_scale = Vector2( 1.52, 1.6 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ButtonFireball" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "   Fireball"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 120.0
margin_bottom = 60.0

[node name="DmgUPPrice" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 58.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "X Coins"
align = 1

[node name="SizeUPPrice" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "X Coins"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 120.0
margin_bottom = 101.0
size_flags_vertical = 3

[node name="DmgUP" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "DmgUP"

[node name="SizeUP" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 120.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SizeUP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoFireball" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 120.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Autofire (x)"
icon = ExtResource( 6 )
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 236.0
margin_top = 635.0
margin_right = 358.0
margin_bottom = 786.096
rect_scale = Vector2( 1.52, 1.6 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 122.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ButtonFrostbolt" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 122.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "     Frostbolt"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer"]
margin_top = 41.0
margin_right = 122.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_top = 46.0
margin_right = 122.0
margin_bottom = 60.0

[node name="DmgUPPriceFrost" type="Label" parent="VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 59.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "X Coins"
align = 1

[node name="DelayPriceFrost" type="Label" parent="VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 63.0
margin_right = 122.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "X Coins"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_top = 64.0
margin_right = 122.0
margin_bottom = 102.0
size_flags_vertical = 3

[node name="DmgFrostUP" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "DmgUP"

[node name="DelayFrost" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 122.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Delay--"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoFrostbolt" type="Button" parent="VBoxContainer2"]
margin_top = 117.0
margin_right = 122.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Autofrost (x)"
icon = ExtResource( 6 )
expand_icon = true

[node name="TopUI" type="HBoxContainer" parent="."]
margin_left = 6.70357
margin_top = 1024.37
margin_right = 106.704
margin_bottom = 1064.37
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TopUI"]
margin_right = 66.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.29
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="TopUI"]
margin_left = 70.0
margin_right = 99.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 56.3968, 663.01 )
amount = 20
process_material = SubResource( 13 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 270.833, 664.01 )
amount = 20
process_material = SubResource( 15 )

[node name="Score" type="Label" parent="."]
margin_left = 1763.51
margin_top = 1038.34
margin_right = 1877.51
margin_bottom = 1070.34
custom_fonts/font = SubResource( 16 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/VBoxContainer/ButtonFireball" to="Tower" method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/DmgUP" to="Tower" method="_on_DmgUP_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/SizeUP" to="Tower" method="_on_SizeUP_pressed"]
[connection signal="pressed" from="VBoxContainer/AutoFireball" to="Tower" method="_on_AutoFireball_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/ButtonFrostbolt" to="Tower" method="_on_ButtonFrostbolt_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer/DmgFrostUP" to="Tower" method="_on_DmgFrostUP_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer/DelayFrost" to="Tower" method="_on_DelayFrost_pressed"]
[connection signal="pressed" from="VBoxContainer2/AutoFrostbolt" to="Tower" method="_on_AutoFrostbolt_pressed"]
